Stylesheets/style.css
/* ... */
.empty {
  visibility: hidden;
  display: none;
}

.suggestions {
  z-index: 11;
  width: 36.5rem;
  margin-left: -0.2rem;
  margin-top: 0.5rem;
  background-color: #f1f1f1;
  border: 0.04rem solid #9d9d9d;
  border-radius: 0.6rem;
  -webkit-box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
  -moz-box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
  box-shadow: 0 0.7rem 2rem 0.32rem rgba(0, 0, 0, 0.3);
}

.suggestions.subfamily-shown {
  width: 54.5rem !important;
}

#motif-list {
  max-height: 24.92rem;
  overflow-y: scroll;
  /*-ms-overflow-style: none;
  scrollbar-width: none;
  overflow: -moz-scrollbars-none;*/
}

/*#motif-list::-webkit-scrollbar {
  width: 0;
  background: transparent;
}*/

.suggestion {
  height: 3.5rem;
}

.hover-behavior:focus {
  background-color: #b7b8b4;
  outline: none;
}

.chosen-in-list {
  background-color: #cdcdcd;
  cursor: pointer;
}

.hover-behavior:focus .chosen-in-list {
  -webkit-box-shadow: inset 0 0 0 0.3rem #b7b8b4;
  -moz-box-shadow: inset 0 0 0 0.3rem #b7b8b4;
  box-shadow: inset 0 0 0 0.3rem #b7b8b4;
  background-color: #cdcdcd;
}

.feature {
  display: inline-block;
  padding-top: 0.4rem;
}

.motif-title {
  width: 14.5rem;
  margin-left: 0.5rem;
}

.motif-title.subfamily-shown {
  width: 16.5rem !important;
}

.motif-family, .motif-subfamily {
  width: 14rem;
  max-width: 14rem;
  vertical-align: top;
  padding-right: 0.5rem;
}

.motif-family p, .motif-subfamily p {
  width: 14rem;
  margin: 0;
  white-space: normal;
}

.motif-subfamily.hidden {
  position: absolute;
}

.motif-gene {
  width: 6rem;
}

.motif-gene.subfamily-shown {
  width: 8.5rem;
}

#support-info {
  height: 2rem;
  border-top: 0.04rem solid #9d9d9d;
  background-color: #e2e2e2;
  border-radius: 0 0 0.6rem 0.6rem;
  text-align: center;
}

.info {
  display: inline-block;
  margin-top: 0.35rem;
  margin-left: 0.5rem;
}

#subfamily-button {
  position: relative;
  float: left;
  width: 7.5rem;
  margin-top: 0.35rem;
  margin-left: 0.5rem;
  margin-right: 2.8rem;
  background-color: #f1f1f1;
}

.motif-count {
  margin-left: 0;
}

.model-collection {
  float: right;
  margin-right: 0.9rem;
}

.not-chosen {
  border-bottom-left-radius: 0 !important;
  border-bottom-right-radius: 0 !important;
}

.not-found {
  border-top: 0 !important;
  border-top-left-radius: 0.548rem !important;
  border-top-right-radius: 0.548rem !important;
}

#error-report {
  display: none;
  vertical-align: middle;
  font-size: 1.2rem;
  color: #bb433f;
  padding: 0.05rem 0.05rem 0.01rem;
  cursor: pointer;
  text-align: center;

}

#second-level {
  display: flex;
  flex-flow: row wrap;
  min-height: 4rem;
  margin-left: 0.8rem;
}

.p-inputs {
  display: inline-block;
  float: left;
  height: 3rem;
  margin-right: 1.2rem;
}

.p-inputs label {
  font-size: 0.9rem;
}

.pvalue-input {
  font-size: 0.7rem;
  margin-bottom: 0.5rem;
  width: 3.3rem;
  padding: 0 0.2rem 0 0.2rem;
  border: 0.08rem solid #9d9d9d;
  border-radius: 0.3rem;
  background-color: #f1f1f1;
}

#pvalue_log {
  width: 1.7rem;
  margin-right: 0.6rem;
}

.slider label {
  font-family: "Lucida Console", "Monospaced", monospace;
  font-size: 0.65rem;
  display: block;
  width: 92.9%;
  margin-left: 6.2%;
  text-align: justify;
  height: 0.65rem;
}

.slider label:after {
  content: "";
  display: inline-block;
  width: 100%;
}

#pvalue_slider {
  width: 100%;
  height: 0.8rem;
}

@media only screen and (max-width: 594px) {
  .p-inputs {
    margin-bottom: 0.8rem !important;
  }
}

@media only screen and (max-width: 597px) {
  .sequence-window {
    margin-left: -0.5rem !important;
  }

  .mode-tab {
    margin-right: -0.5rem !important;
  }

  #tab-bar, .tab-result {
    width: 9rem !important;
    float: right;
  }

  #input_button {
    width: 7.5rem !important;
    margin-left: 1.3rem !important;
  }

  .wrapper {
    width: 100vw;
  }

  .wrapper #output_textarea {
    width: calc(100vw - 8.8rem - 16px) !important;
  }

  #input_textarea {
    width: 98% !important;
  }

  #upload-container {
    width: 7.5rem !important;
    margin-right: 0.73rem !important;
  }
}

.sequence-window {
  width: 100%;
  border-collapse: collapse;
  margin-top: 0;
}

.sequence-window td {
  padding: 0;
}

#sequence-window__heading {
  text-align: left;
}

.right-tools-panel {
  padding-right: 0.4rem;
  float: right;
  z-index: 2;
}

.right-tool {
  display: inline;
}

#mode-select-button {
  background: #fff;
}

.zoom-button {
  margin-right: 0 !important;
  white-space: nowrap;
}

.zoom-button .material-icons {
  padding: 0.05rem 0.05rem 0.01rem;
  height: 1.25rem;
  width: 1.25rem;
  background-color: #fff;
}

.zoom-group {
  display: inline;
  margin-left: 0.5rem;
}

.zoom-button {
  margin-right: 0.6rem;
}

@media only screen and (max-width: 550px) {
  .zoom-button .icon {
    display: none;
    visibility: hidden;
  }
}

#sequence-window__button-cell {
  text-align: center;
}

#input_button {
  height: 1.5rem !important;
  padding: 0 !important;
  font-size: 1rem;
  width: 8.5rem;
  margin: 0.25rem;
  background-color: #fff;
}

@media only screen and (max-width: 720px) {
  .sequence-window__label {
    display: none;
    visibility: hidden;
  }

  .right-tools-panel {
    width: 100%;
  }

  .mode-select-container {
    padding-left: 0.5rem;
  }
}

@media only screen and (max-width: 415px) {
  .mode-select-container label {
    display: none;
    visibility: hidden;
  }

  .header-buttons {
    position: static;
  }
}

@media only screen and (max-width: 380px) {
  .zoom-button, .header-collection label {
    display: none;
    visibility: hidden;
  }
}

@media only screen and (max-width: 344px) {
  .p-inputs label:nth-of-type(2) {
    display: none;
    visibility: hidden;
  }

  .header-buttons {
    margin-top: 0;
  }

  .nav__left {
    text-align: center;
  }
}

#sequence-window__tab-bar {
  width: 10rem;
  vertical-align: top;
  text-align: center;
}
/* ... */

